[gd_scene load_steps=10 format=3 uid="uid://cxyyuibifmqs"]

[ext_resource type="Script" path="res://UI/Achievements/achievement_popup_panel.gd" id="1_kq5ul"]
[ext_resource type="Script" path="res://Objects/timer_unscaled.gd" id="2_8x4os"]
[ext_resource type="Texture2D" uid="uid://c4agc4wxn88u2" path="res://icon.svg" id="2_y7k7t"]
[ext_resource type="Script" path="res://Scripts/animation_player_unscaled.gd" id="3_itr2o"]
[ext_resource type="AudioStream" uid="uid://5vdt3vvhfkho" path="res://Audio/AchievementGet.wav" id="3_vj25p"]

[sub_resource type="Animation" id="Animation_cqqux"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_bs25g"]
resource_name = "enter"
length = 0.2
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_pyef6"]
resource_name = "exit"
length = 0.2
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.2),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"destroy"
}]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_btcdm"]
_data = {
"RESET": SubResource("Animation_cqqux"),
"enter": SubResource("Animation_bs25g"),
"exit": SubResource("Animation_pyef6")
}

[node name="AchievementPopupPanel" type="PanelContainer"]
script = ExtResource("1_kq5ul")

[node name="TimerUnscaled" type="Node" parent="."]
script = ExtResource("2_8x4os")
wait_time = 3.0
one_shot = true
autostart = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_btcdm")
}
autoplay = "enter"
script = ExtResource("3_itr2o")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 4
theme_override_constants/margin_top = 4
theme_override_constants/margin_right = 4
theme_override_constants/margin_bottom = 4

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="MarginContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
size_flags_vertical = 4
texture = ExtResource("2_y7k7t")
expand_mode = 1

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/HBoxContainer"]
layout_mode = 2

[node name="NameLabel" type="Label" parent="MarginContainer/HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "NAME"

[node name="DescriptionLabel" type="Label" parent="MarginContainer/HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 8
text = "Description Description Description Description "
text_overrun_behavior = 3

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
process_mode = 3
stream = ExtResource("3_vj25p")
autoplay = true
